# tokasim-rs

./: .gitignore  Cargo.toml  README.md
docs/: SESSION_REPORT_20260118.md  TOKASIM_RS_DETAILED_METRICS.tex  TOKASIM_RS_PAPER.tex  TOKASIM_RS_TECHNICAL_REPORT.tex
examples/: visualize.rs
src/: constants.rs  lib.rs  main.rs  materials.rs  types.rs
src/cfd/: mod.rs
src/components/: inventory.rs  mod.rs  power.rs  redundancy.rs  safety.rs
src/control/: mod.rs
src/cost/: mod.rs
src/coupling/: jfnk.rs  mod.rs
src/field/: maxwell_stress.rs  mod.rs
src/geometry/: mod.rs
src/materials/: mod.rs
src/mhd/: grad_shafranov.rs  mod.rs
src/neutronics/: mod.rs
src/nuclear/: mod.rs
src/optimizer/: adjoint.rs  algorithms.rs  constraints.rs  cost_model.rs  design.rs  infrastructure.rs  mod.rs  objectives.rs  parameters.rs  reports.rs  scaling_laws.rs  utils.rs
src/particle/: mod.rs
src/pra/: mod.rs
src/pwi/: mod.rs
src/simulator/: mod.rs
src/stochastic/: mod.rs
src/transport/: mod.rs  surface_sampling.rs
src/usd/: mod.rs
src/visualization/: animation.rs  bevy.rs  components.rs  dashboard.rs  mod.rs  particles.rs  projections.rs  renderer.rs
