[package]
name = "tokasim-rs"
version = "0.1.0"
edition = "2021"
authors = ["Francisco Molina-Burgos <fmolina@avermex.com>"]
description = "Tokamak Fusion Reactor Hyperrealistic Simulator - Deterministic Physics Engine in Rust"
license = "MIT"
repository = "https://github.com/Yatrogenesis/tokasim-rs"
keywords = ["fusion", "tokamak", "plasma", "physics", "simulation"]
categories = ["science", "simulation"]

[dependencies]
# Core math - keeping dependencies minimal
# Phase 1: Zero external deps for core physics
# Phase 2: Rayon for parallelization (enabled)

# Required for optimizer NSGA-II
rand = "0.8"

# Parallelization for real-time performance
rayon = "1.10"

# Bevy 3D visualization (optional)
bevy = { version = "0.14", optional = true }
bevy_egui = { version = "0.29", optional = true }

[dev-dependencies]
# Testing only

[features]
default = ["parallel"]
parallel = []    # Rayon parallelization enabled by default
simd = []        # Future: SIMD optimizations
yatronet = []    # Future: YatroNet distributed computing
nl-control = []  # NL-SRE integration for natural language control
bevy-viz = ["bevy", "bevy_egui"]  # Bevy 3D real-time visualization

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1

[[bin]]
name = "tokasim"
path = "src/main.rs"

[[bin]]
name = "tokasim-viz"
path = "src/bin/tokasim_viz.rs"
required-features = ["bevy-viz"]

[[bin]]
name = "tokasim-explorer"
path = "src/bin/tokasim_explorer.rs"
required-features = ["bevy-viz"]

# Workspace members will be added in Phase 2
# For now, monolithic structure for simplicity
